# dsite

./: .gitattributes  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  chrash.yml  config.yml
dsite/: admin.py  forms.py  response.py  server.py  shortcuts.py  template.py  templates.py  urls.py
dsite/http/: router.py
dsite/management/: adminsite.py  migrations.py  runserver.py
dsite/services/: __init__.py  management.py
